force-app/main/default/objects/tc9_pr__Pay_Advice_Line__c/tc9_pr__Pay_Advice_Line__c.object-meta.xml
<CustomObject>
    <label>Pay Advice Line</label>
    <nameField>
        <displayFormat>PAL-{0000000000}</displayFormat>
        <label>Pay Advice Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pay Advice Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>