force-app/main/default/objects/tc9_pr__Pay_Advice_Line__c/fields/tc9_pr__Assignment__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Assignment of this Pay Advice Line.  Only populated if Pay Advice Detail Level is &apos;Assignment&apos; on the payroll schedule.</description>
    <inlineHelpText>The related Assignment of this Pay Advice Line.  Only populated if Pay Advice Detail Level is &apos;Assignment&apos; on the payroll schedule.</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>tc9_pr__Assignment__c</referenceTo>
    <relationshipLabel>Pay Advice Lines</relationshipLabel>
    <relationshipName>Pay_Advice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>