force-app/main/default/objects/tc9_pr__Pay_Advice_Line__c/fields/tc9_pr__Classification__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Classification__c</fullName>
    <description>The record type of the Pay Transaction/Payee Aggregate which created this Pay Advice Line record.</description>
    <inlineHelpText>The record type of the Pay Transaction/Payee Aggregate which created this Pay Advice Line record.</inlineHelpText>
    <label>Classification</label>
    <length>100</length>
    <type>Text</type>
</CustomField>