force-app/main/default/objects/tc9_pr__Pay_Advice_Line__c/fields/tc9_pr__Current_Units__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Current_Units__c</fullName>
    <description>The sum of Quantity from the related Pay Transactions</description>
    <inlineHelpText>The sum of Quantity from the related Pay Transactions</inlineHelpText>
    <label>Current Units</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>