force-app/main/default/objects/tc9_pr__Pay_Advice_Line__c/fields/tc9_pr__Current_Value__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Current_Value__c</fullName>
    <description>The sum of Pay Total from the related Pay Transactions</description>
    <inlineHelpText>The sum of Pay Total from the related Pay Transactions</inlineHelpText>
    <label>Current Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>