force-app/main/default/objects/tc9_pr__Pay_Advice_Line__c/fields/tc9_pr__Display_Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Display_Pay_Code__c</fullName>
    <description>Indicates whether this pay advice line will be displayed on the standard Pay Advice PDF.</description>
    <inlineHelpText>Indicates whether this pay advice line will be displayed on the standard Pay Advice PDF.</inlineHelpText>
    <label>Display Pay Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>