force-app/main/default/objects/tc9_pr__Pay_Advice_Line__c/fields/tc9_pr__Display_Payee_Leave_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Display_Payee_Leave_Rule__c</fullName>
    <description>Controls whether the leave balance will be displayed on the Pay Advice PDF</description>
    <inlineHelpText>Controls whether the leave balance will be displayed on the Pay Advice PDF</inlineHelpText>
    <label>Display Payee Leave Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>