force-app/main/default/objects/tc9_pr__Pay_Advice_Line__c/fields/tc9_pr__Employee__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Employee this line belongs to</description>
    <inlineHelpText>The Employee this line belongs to</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pay Advice Lines</relationshipLabel>
    <relationshipName>Pay_Advice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>