force-app/main/default/objects/tc9_pr__Pay_Advice_Line__c/fields/tc9_pr__Leave_Balance_Days__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Leave_Balance_Days__c</fullName>
    <description>Leave Balance in Days</description>
    <inlineHelpText>Leave Balance in Days</inlineHelpText>
    <label>Leave Balance Days</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>