force-app/main/default/objects/tc9_pr__Pay_Advice_Line__c/fields/tc9_pr__Pay_Rate_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Rate_Multiplier__c</fullName>
    <description>The pay rate multiplier assigned to the associated Pay Code</description>
    <inlineHelpText>The pay rate multiplier assigned to the associated Pay Code</inlineHelpText>
    <label>Pay Rate Multiplier</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>