force-app/main/default/objects/tc9_pr__Pay_Advice_Line__c/fields/tc9_pr__Payee__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Payee this line belongs to</description>
    <inlineHelpText>The Payee this line belongs to</inlineHelpText>
    <label>Payee</label>
    <referenceTo>tc9_pr__Payee__c</referenceTo>
    <relationshipLabel>Pay Advice Lines</relationshipLabel>
    <relationshipName>Pay_Advice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>