force-app/main/default/objects/tc9_pr__Pay_Advice_Line__c/fields/tc9_pr__Payee_Leave_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payee_Leave_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated Payee Leave Rule</description>
    <inlineHelpText>The associated Payee Leave Rule</inlineHelpText>
    <label>Payee Leave Rule</label>
    <referenceTo>tc9_pr__Payee_Leave_Rule__c</referenceTo>
    <relationshipLabel>Pay Advice Lines</relationshipLabel>
    <relationshipName>Pay_Advice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>