force-app/main/default/objects/tc9_pr__Pay_Advice_Line__c/fields/tc9_pr__Prior_Value__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Prior_Value__c</fullName>
    <description>Where the pay advice grouping is Payee and multiple calendar periods have been included in the calculation this field holds the value from prior calendar periods, in this pay batch.</description>
    <inlineHelpText>Where the pay advice grouping is Payee and multiple calendar periods have been included in the calculation this field holds the value from prior calendar periods, in this pay batch.</inlineHelpText>
    <label>Prior Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>