force-app/main/default/objects/tc9_pr__Pay_Advice_Line__c/fields/tc9_pr__Project_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Project_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Project Code.</description>
    <inlineHelpText>The related Project Code.</inlineHelpText>
    <label>Project Code</label>
    <referenceTo>tc9_pr__Project_Code__c</referenceTo>
    <relationshipLabel>Pay Advice Lines</relationshipLabel>
    <relationshipName>Pay_Advice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>