force-app/main/default/objects/tc9_pr__Pay_Advice_Line__c/fields/tc9_pr__Superannuation_Fund__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Superannuation_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Superannuation Fund</description>
    <inlineHelpText>The related Superannuation Fund</inlineHelpText>
    <label>Superannuation Fund</label>
    <referenceTo>tc9_pr__Superannuation_Fund__c</referenceTo>
    <relationshipLabel>Pay Advice Lines</relationshipLabel>
    <relationshipName>Pay_Advice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>