force-app/main/default/objects/tc9_pr__Pay_Advice_Line__c/fields/tc9_pr__YTD_Units__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__YTD_Units__c</fullName>
    <description>The YTD Units from the related Payee Aggregate record</description>
    <inlineHelpText>The YTD Units from the related Payee Aggregate record</inlineHelpText>
    <label>YTD Units</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>